--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionString": {
+    "DefaultConnection": "Data Source=jwtauth.db"
+  }
+  "JWTSetting": {
+    "securityKey": "kjdfSFjhJHGJdsfhdsjheiuUIHdgssIRUWYIdfkjb",
+    "ValidAudience": "http://localhost:4200",
+    "ValidIssuer": "http://localhost:5000"
+  }
 }
