--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -8,10 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionString": {
     "DefaultConnection": "Data Source=jwtauth.db"
-  }
+  },
   "JWTSetting": {
     "securityKey": "kjdfSFjhJHGJdsfhdsjheiuUIHdgssIRUWYIdfkjb",
     "ValidAudience": "http://localhost:4200",
-    "ValidIssuer": "http://localhost:5000"
+    "ValidIssuer": "http://localhost:5000",
+    "expireInMinutes": 60
   }
 }
