--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionString": {
+  "ConnectionStrings": {
     "DefaultConnection": "Data Source=jwtauth.db"
   },
   "JWTSetting": {
