--- a/.github/workflows/dotnet-api-build.yml
+++ b/.github/workflows/dotnet-api-build.yml
@@ -1,7 +1,4 @@
-# This workflow will build a .NET project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
-
-name: .NET
+name: .NET Build
 
 on:
   push:
@@ -21,11 +18,28 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      working-directory: ./API  # Set working directory to API folder
+      working-directory: ./API
       run: dotnet restore
     - name: Build
-      working-directory: ./API  # Set working directory to API folder
+      working-directory: ./API
       run: dotnet build --no-restore
     - name: Test
-      working-directory: ./API  # Set working directory to API folder
+      working-directory: ./API
       run: dotnet test --no-build --verbosity normal
+
+  trigger_angular_build:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Trigger Angular Build Workflow
+      uses: actions/github-script@0.10.1
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        script: |
+          const { data: workflows } = await github.actions.listRepoWorkflows();
+          const angularBuildWorkflow = workflows.find(workflow => workflow.name === 'Angular Build');
+          if (angularBuildWorkflow) {
+            await github.actions.createWorkflowDispatch({
+              workflow_id: angularBuildWorkflow.id
+            });
+          }
