--- a/.github/workflows/dotnet-api-build.yml
+++ b/.github/workflows/dotnet-api-build.yml
@@ -28,20 +28,15 @@ jobs:
         dotnet restore
         dotnet build --no-restore
 
-    # Test .NET project
-    - name: Test .NET API
-      working-directory: ./API
-      run: dotnet test --no-build --verbosity normal
-
     # Install Node.js and npm
     - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '14.x'
+        node-version: '18.16.x'
 
     # Install Angular CLI
     - name: Install Angular CLI
-      run: npm install -g @angular/cli
+      run: npm install -g @angular/cli@16.0.0
 
     # Navigate to Angular app directory
     - name: Navigate to Angular App Directory
