--- a/.github/workflows/dotnet-api-build.yml
+++ b/.github/workflows/dotnet-api-build.yml
@@ -44,7 +44,7 @@ jobs:
 
     # Install Angular dependencies
     - name: Install Angular Dependencies
-      run: npm install
+      run: npm install --legacy-peer-deps
 
     # Build Angular app
     - name: Build Angular App
