--- a/.github/workflows/angular-client-build.yml
+++ b/.github/workflows/angular-client-build.yml
@@ -1,34 +1,43 @@
 name: Angular Build
 
 on:
-  workflow_run:
-    workflows: ["DotNet Build"]
-    types:
-      - completed
+  push:
+    branches:
+      - master
+    paths:
+      - 'client/**'
+  pull_request:
+    branches:
+      - master
+    paths:
+      - 'client/**'
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v2
 
     # Setup Node.js
     - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '14.x'
+        node-version: '18.16.x'
 
     # Install Angular CLI
     - name: Install Angular CLI
-      run: npm install -g @angular/cli
+      run: npm install -g @angular/cli@16.0.0
 
     # Navigate to Angular app directory
     - name: Navigate to Angular App Directory
-      working-directory: ./client
+      run: cd client
 
     # Install Angular dependencies
     - name: Install Angular Dependencies
-      run: npm install
+      run: npm install --legacy-peer-deps
 
     # Build Angular app
     - name: Build Angular App
