--- a/.github/workflows/angular-client-build.yml
+++ b/.github/workflows/angular-client-build.yml
@@ -25,12 +25,12 @@ jobs:
     - name: Setup Node.js
       uses: actions/setup-node@v2
       with:
-        node-version: '18.16.x'
+        node-version: '16.x.x'
 
     # Install Angular CLI
     - name: Install Angular CLI
       working-directory: ./clientapp
-      run: npm install -g @angular/cli@16.0.0
+      run: npm install -g @angular/cli@14.2.13
 
     # Install Angular dependencies
     - name: Install Angular Dependencies
