final commit - backend

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -13,6 +13,7 @@
     "securityKey": "kjdfSFjhJHGJdsfhdsjheiuUIHdgssIRUWYIdfkjb",
     "ValidAudience": "http://localhost:4200",
     "ValidIssuer": "http://localhost:5000",
-    "expireInMinutes": 60
+    "expireInMinutes": 2,
+    "RefreshTokenValidityIn": 3
   }
 }
